--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge API</title>
+    <style>
+        .bold-text {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome! This API provides ride duration in seconds per
-        country.</h1>
-    <p>Use the API by calling: <code>/&lt;country_code&gt;</code></p>
+    <h1>Welcome!</h1>
+    <p>This API provides the average ride duration in seconds per country.</p>
+    <p><span class="bold-text">Use the API by calling:</span> <code>/&lt;country_code&gt;</code></p>
+    <p><span class="bold-text">country_code:</span> Two-letter country code conforms to <a href="https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2" target="_blank">ISO 3166-1</a>.</p>
 </body>
 </html>
